add_executable(solver_tests test_solver.cpp)
target_include_directories(solver_tests PRIVATE ${oRatio_SOURCE_DIR}/smt ${oRatio_SOURCE_DIR}/smt/lra ${oRatio_SOURCE_DIR}/smt/ov ${oRatio_SOURCE_DIR}/smt/dl ${oRatio_SOURCE_DIR}/core ${oRatio_SOURCE_DIR}/solver)
target_link_libraries(solver_tests PRIVATE solver)

add_test(NAME SolverTest00 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_00.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest01 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_01.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest02 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_02.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest03 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_03.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest04 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_04.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest05 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_05.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest06 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_06.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest07 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_07.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest08 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_08.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest09 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_09.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest10 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_10.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest11 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_11.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SolverTest12 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/core/example_12.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
set_tests_properties(SolverTest02 SolverTest05 SolverTest06 PROPERTIES WILL_FAIL TRUE)

add_test(NAME RRTest00 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/rr/rr_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME RRTest01 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/rr/rr_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME RRTest02 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/rr/rr_2.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME RRTest03 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/rr/rr_3.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

add_test(NAME SVTest00 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/sv/sv_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SVTest01 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/sv/sv_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME SVTest02 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/sv/sv_2.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

add_test(NAME GOAC_1Pic_1Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_1pic_1wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_1Pic_2Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_1pic_2wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_1Pic_3Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_1pic_3wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_1Pic_4Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_1pic_4wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_1Pic_5Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_1pic_5wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_2Pic_1Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_2pic_1wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_2Pic_2Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_2pic_2wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_2Pic_3Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_2pic_3wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_2Pic_4Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_2pic_4wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_2Pic_5Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_2pic_5wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_3Pic_1Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_3pic_1wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_3Pic_2Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_3pic_2wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_3Pic_3Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_3pic_3wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_3Pic_4Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_3pic_4wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_3Pic_5Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_3pic_5wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_4Pic_1Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_4pic_1wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_4Pic_2Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_4pic_2wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_4Pic_3Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_4pic_3wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_4Pic_4Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_4pic_4wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_4Pic_5Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_4pic_5wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_5Pic_1Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_5pic_1wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_5Pic_2Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_5pic_2wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_5Pic_3Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_5pic_3wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_5Pic_4Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_5pic_4wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME GOAC_5Pic_5Wind COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/goac/goac_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/map.rddl" "${CMAKE_SOURCE_DIR}/examples/goac/goac_5pic_5wind.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

add_test(NAME Logistics_0 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/logistics/logistics_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/logistics/logistics_problem_0.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME Logistics_1 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/logistics/logistics_domain.rddl" "${CMAKE_SOURCE_DIR}/examples/logistics/logistics_problem_1.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

add_test(NAME Telepresence_0 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/telepresence/telepresence_00.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME Telepresence_1 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/telepresence/telepresence_01.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME Telepresence_2 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/telepresence/telepresence_02.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME Telepresence_3 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/telepresence/telepresence_03.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME Telepresence_4 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/telepresence/telepresence_04.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

add_test(NAME Education_1 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/education/education_01.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_test(NAME Education_2 COMMAND solver_tests "${CMAKE_SOURCE_DIR}/examples/education/education_02.rddl" "solution.json" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
