<?xml version="1.0"?>
<package format="2">
  <name>deliberative_tier</name>
  <version>0.1.0</version>
  <description>The Deliberative package</description>

  <maintainer email="riccardo.debenedictis@istc.cnr.it">Riccardo De Benedictis</maintainer>
  <maintainer email="gloria.beraldo@istc.cnr.it">Gloria Beraldo</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>roslaunch</build_depend>
  <depend>deliberative_messages</depend>
  <depend>deliberative_services</depend>
</package>